feat: 添加更新用户详情的功能
